src/snapshots/tptp__tests__formula_selection-3.snap
---
source: src/tests.rs
expression: parsed

---
FormulaSelection(
    Some(
        NameList(
            [
                AtomicWord(
                    Lower(
                        LowerWord(
                            "name",
                        ),
                    ),
                ),
            ],
        ),
    ),
)
