src/snapshots/tptp__tests__formula_selection.snap
---
source: src/tests.rs
expression: parsed

---
FormulaSelection(
    Some(
        NameList(
            [
                AtomicWord(
                    Lower(
                        LowerWord(
                            "name",
                        ),
                    ),
                ),
                AtomicWord(
                    SingleQuoted(
                        SingleQuoted(
                            "name",
                        ),
                    ),
                ),
                Integer(
                    Integer(
                        "123",
                    ),
                ),
            ],
        ),
    ),
)
