src/snapshots/tptp__tests__functor.snap
---
source: src/tests.rs
expression: parsed
---
Functor(
    Lower(
        LowerWord(
            "functor",
        ),
    ),
)
