src/snapshots/tptp__tests__general_data-11.snap
---
source: src/tests.rs
expression: parsed
---
DistinctObject(
    DistinctObject(
        "distinct object",
    ),
)
