src/snapshots/tptp__tests__general_data-3.snap
---
source: src/tests.rs
expression: parsed

---
Variable(
    Variable(
        UpperWord(
            "X",
        ),
    ),
)
