src/snapshots/tptp__tests__general_data-7.snap
---
source: src/tests.rs
expression: parsed
---
Formula(
    Fof(
        Formula(
            Unitary(
                Atomic(
                    Plain(
                        PlainAtomicFormula(
                            Constant(
                                Constant(
                                    Functor(
                                        Lower(
                                            LowerWord(
                                                "p",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
