src/snapshots/tptp__tests__general_data-9.snap
---
source: src/tests.rs
expression: parsed
---
Number(
    Integer(
        Integer(
            "123",
        ),
    ),
)
