src/snapshots/tptp__tests__general_data.snap
---
source: src/tests.rs
expression: parsed
---
Atomic(
    Lower(
        LowerWord(
            "c",
        ),
    ),
)
