src/snapshots/tptp__tests__general_list-3.snap
---
source: src/tests.rs
expression: parsed

---
GeneralList(
    Some(
        GeneralTerms(
            [
                Data(
                    Variable(
                        Variable(
                            UpperWord(
                                "X",
                            ),
                        ),
                    ),
                ),
            ],
        ),
    ),
)
